[FEATURE] DELETE /users/{userId}
